<resources>
    <string name="app_name">MessengerApp</string>
    <string name="login_password_et_hint">Enter your password</string>
    <string name="login_nickname_et_hint">Enter your nickname</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="not_registered">Not registered?</string>
    <string name="what_i_do">What i do</string>
    <string name="search">Search</string>
    <string name="displaynametextview">DisplayNameTextView</string>
    <string name="message">message</string>
    <string name="now">now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
</resources>