<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/conversationListItemProfilePicImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar_image_placeholder"
        />


    <TextView
        android:id="@+id/conversationListItemDisplayNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displaynametextview"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/conversationListItemProfilePicImageView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/conversationListItemMessageTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/conversationListItemProfilePicImageView"
        app:layout_constraintTop_toBottomOf="@+id/conversationListItemDisplayNameTextView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now"
        android:textSize="12sp"
        android:id="@+id/conversationListItemTimeTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>